# simple_box_ws

./: README.md
simple_box_ws/: CMakeLists.txt  package.xml
simple_box_ws/launch/: simulation.launch.py
simple_box_ws/models/ground_plane/: model.config  model.sdf
simple_box_ws/models/simple_box/: model.config  model.sdf
simple_box_ws/worlds/: world.sdf
